#43 - refinements to height behaviour for scrolling areas - fix: problem with +Add Effect button stretching vertically - fix: problem with narrow Details tab - fix: problem with the bottom of the inset appearing in the wrong place - fix: problem with breathing space at the bottom of scrolling area - fix: problem with assignment to editItem in EffectsSection

--- a/src/styles/Main.sass
+++ b/src/styles/Main.sass
@@ -134,6 +134,7 @@
     border: 3px ridge var(--ff-border-color)
     // border: 2px double var(--ff-border-color)
     width: fit-content
+    max-height: 3em
     padding: 0 0.5em
     color: var(--color-highligh-light)
     border-radius: var(--border-radius-icon)
